Updated P3 files, almost finished

--- a/p3-ed/pila_maxmin/CMakeLists.txt
+++ b/p3-ed/pila_maxmin/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.6)
 project(pila_maxmin)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 set(SOURCE_FILES
-    include/VD.h
-    include/VD.cpp
-    src/VD_test.cpp)
+        src/pila_maxmin.cpp
+        src/pila_maxmin_vd.cpp
+        src/usopilas_max.cpp)
 
 include_directories(./src ./include)
 
